src/bcplus/parser/detail/Scanner.cpp
/* Generated by re2c 0.13.5 on Fri Mar 28 14:48:18 2014 */
#line 1 "bcplus/parser/detail/Scanner.re2c"

#include <sstream>

#include <boost/filesystem.hpp>
#include <boost/filesystem/fstream.hpp>

#include "bcplus/parser/detail/Scanner.h"
#include "bcplus/parser/detail/lemon_parser.h"

#include "bcplus/Location.h"
#include "bcplus/parser/Token.h"

#include "bcplus/parser/detail/ScannerSource.h"
#include "bcplus/parser/detail/ScannerRawSource.h"
#include "bcplus/parser/detail/ScannerTokenSource.h"
#include "bcplus/parser/detail/ScannerFileSource.h"
#include "bcplus/parser/detail/ScannerBufferSource.h"

namespace u = babb::utils; 
namespace fs = boost::filesystem;

namespace bcplus {
namespace parser {
namespace detail {

Scanner::Scanner(Configuration const* config)
	: _cond(yycNORMAL), _config(config), _in_macro(false) {
	// Intentionally left blank
}

Scanner::~Scanner() {
	// Intentionally left blank
}

bool Scanner::push_front(fs::path const& file, bool squelch) {
	u::ref_ptr<ScannerFileSource> src = new ScannerFileSource(_config, file, squelch);
	if (!src->good()) return false;
	_sources.push_front(src.get());
	return true;
}

bool Scanner::push_back(fs::path const& file, bool squelch) {
	u::ref_ptr<ScannerFileSource> src = new ScannerFileSource(_config, file, squelch);
	if (!src->good()) return false;
	_sources.push_back(src.get());
	return true;
}

void Scanner::push_front(char const* buffer, Location const& loc, bool track_position) {
	u::ref_ptr<ScannerBufferSource> src = new ScannerBufferSource(_config, buffer, loc, track_position);
	_sources.push_front(src.get());
}

void Scanner::push_back(char const* buffer, Location const& loc, bool track_position) {
	u::ref_ptr<ScannerBufferSource> src = new ScannerBufferSource(_config, buffer, loc, track_position);
	_sources.push_back(src.get());
}

void Scanner::push_back(Token* token) {
	if (!_sources.size() || _sources.back()->type() != ScannerSource::Type::TOKENS) {
		_sources.push_back(new ScannerTokenSource(token));
	} else ((ScannerTokenSource*)_sources.back().get())->push_back(token);
}

void Scanner::push_front(Token* token) {
	if (!_sources.size() || _sources.front()->type() != ScannerSource::Type::TOKENS) {
		_sources.push_front(new ScannerTokenSource(token));
	} else ((ScannerTokenSource*)_sources.front().get())->push_front(token);
}

void Scanner::push_back(TokenList* tokens) {
	if (!_sources.size() || _sources.back()->type() != ScannerSource::Type::TOKENS) {
		_sources.push_back(new ScannerTokenSource(tokens));
	} else ((ScannerTokenSource*)_sources.back().get())->push_back(tokens);
}

void Scanner::push_front(TokenList* tokens) {
	if (!_sources.size() || _sources.front()->type() != ScannerSource::Type::TOKENS) {
		_sources.push_front(new ScannerTokenSource(tokens));
	} else ((ScannerTokenSource*)_sources.front().get())->push_front(tokens);
}


Token* Scanner::readToken() {
	u::ref_ptr<Token> token = NULL;
	if (!size()) {
		Location l = loc();
		token  = new Token(T_EOF, new ReferencedString("<EOF>"), l, l);
	} else {
		do {
			ScannerSource* src = _sources.front();
#ifndef NDEBUG
			_config->ostream(Verb::TRACE_SCANNER) << "TRACE: " << size() << " sources, reading from \"" 
				<< (src->loc().file() ? src->loc().file()->native() : std::string("<NULL>")) << "\"." << std::endl;
#endif
			switch(src->type()) {
			case ScannerSource::Type::RAW:
				token = tokenize((ScannerRawSource*)src);
				break;
			case ScannerSource::Type::TOKENS:
				token = ((ScannerTokenSource*)src)->next();
				break;
			}
	
			if (!token || token->type() == T_ERR_IO) {
#ifndef NDEBUG
				_config->ostream(Verb::TRACE_SCANNER) << "TRACE: Scanner encountered IO error." << std::endl;
#endif
				_sources.pop_front();
			} else if (token->type() == T_EOF) {
#ifndef NDEBUG
				_config->ostream(Verb::TRACE_SCANNER) << "TRACE: Scanner encountered end of input source." << std::endl;
#endif
				_sources.pop_front();
			}
		} while (token && token->type() == T_EOF && size());
	}
	
	if (!token) {
		Location l = loc();
#ifndef NDEBUG
		_config->ostream(Verb::TRACE_SCANNER) << "TRACE: Scanner got a null token." << std::endl;
#endif
		token  = new Token(T_ERR_IO, new ReferencedString("<IO ERROR>"), l, l);
	}

#ifndef NDEBUG
	_config->ostream(Verb::TRACE_SCANNER) << "TRACE: " << token->beginLoc() << ": (" << token->typeString() << "): \"" << *token << "\": Read from scanner." << std::endl;
#endif

	return token.release();
}


#define BLK_INIT(s) \
	blk.str(s); \
	use_blk = true; \
	source->token() = source->cursor() + 1;

#define BLK_LINE \
	source->newline(); \
    blk.write(source->token(), (size_t)(source->cursor() - source->token())); \
	source->token() = source->cursor() + 1;		

#define BLK_FINISH(sz) \
	blk.write(source->token(), (size_t)(source->cursor() - source->token() - sz));

Token* Scanner::tokenize(ScannerRawSource* source) {
	if (source->eof()) return new Token(T_EOF, new ReferencedString("<EOF>"), source->loc(), source->loc());
	else if (!source->good()) return new Token(T_ERR_IO, new ReferencedString("<IO ERROR>"), source->loc(), source->loc());


	std::stringstream blk;
	int ret;
	Location begin;
	bool use_blk = false;
	size_t preskip = 0;
	size_t postskip = 0;

	int parens = 0;
	bool dbl_quote = false;
	bool sgl_quote = false;

	char const* marker;

re2c_start:
	marker = source->token() = source->cursor();
	begin = source->loc();

	
#line 174 "<stdout>"
{
	char yych;
	unsigned int yyaccept = 0;
	switch (_cond) {
	case yycARG: goto yyc_ARG;
	case yycASP_CP: goto yyc_ASP_CP;
	case yycASP_GR: goto yyc_ASP_GR;
	case yycBLK_COMMENT: goto yyc_BLK_COMMENT;
	case yycCOMMENT: goto yyc_COMMENT;
	case yycDBL_STRING: goto yyc_DBL_STRING;
	case yycF2LP_CP: goto yyc_F2LP_CP;
	case yycF2LP_GR: goto yyc_F2LP_GR;
	case yycLUA_CP: goto yyc_LUA_CP;
	case yycLUA_GR: goto yyc_LUA_GR;
	case yycMACRO: goto yyc_MACRO;
	case yycNORMAL: goto yyc_NORMAL;
	case yycSGL_STRING: goto yyc_SGL_STRING;
	}
/* *********************************** */
yyc_ARG:

	if ((source->limit() - source->cursor()) < 2) source->fill(2);
	yych = *source->cursor();
	switch (yych) {
	case 0x00:	goto yy3;
	case '\n':	goto yy2;
	case '"':	goto yy7;
	case '\'':	goto yy9;
	case '(':	goto yy11;
	case ')':	goto yy13;
	case ',':	goto yy15;
	default:	goto yy5;
	}
yy2:
yy3:
	marker = source->cursor() + 1;
	++source->cursor();
	switch ((yych = *source->cursor())) {
	case ')':
	case ',':	goto yy17;
	default:	goto yy4;
	}
yy4:
#line 628 "bcplus/parser/detail/Scanner.re2c"
	{
													// Figure out why we're still here...
													if (parens > 0 ) ret = T_ERR_PAREN_MISMATCH;
													else if (sgl_quote || dbl_quote) ret = T_ERR_UNTERMINATED_STRING;
													else ret = T_ERR_SYNTAX;
													goto re2c_finish;
												}
#line 226 "<stdout>"
yy5:
	marker = source->cursor() + 1;
	++source->cursor();
	switch ((yych = *source->cursor())) {
	case ')':
	case ',':	goto yy17;
	default:	goto yy6;
	}
yy6:
#line 635 "bcplus/parser/detail/Scanner.re2c"
	{												goto yyc_ARG;						}
#line 238 "<stdout>"
yy7:
	marker = source->cursor() + 1;
	++source->cursor();
	switch ((yych = *source->cursor())) {
	case ')':
	case ',':	goto yy25;
	default:	goto yy8;
	}
yy8:
#line 614 "bcplus/parser/detail/Scanner.re2c"
	{ if (!sgl_quote) dbl_quote = !dbl_quote;		goto yyc_ARG;						}
#line 250 "<stdout>"
yy9:
	marker = source->cursor() + 1;
	++source->cursor();
	switch ((yych = *source->cursor())) {
	case ')':
	case ',':	goto yy23;
	default:	goto yy10;
	}
yy10:
#line 615 "bcplus/parser/detail/Scanner.re2c"
	{ if (!dbl_quote) sgl_quote = !sgl_quote;		goto yyc_ARG;						}
#line 262 "<stdout>"
yy11:
	marker = source->cursor() + 1;
	++source->cursor();
	switch ((yych = *source->cursor())) {
	case ')':
	case ',':	goto yy21;
	default:	goto yy12;
	}
yy12:
#line 580 "bcplus/parser/detail/Scanner.re2c"
	{ 
												  if (sgl_quote || dbl_quote) goto yyc_ARG;
												  if (!parens++) {
												  	ret = T_PAREN_L;						
													goto re2c_finish;
												  } else goto yyc_ARG;
												}
#line 280 "<stdout>"
yy13:
	marker = source->cursor() + 1;
	++source->cursor();
	switch ((yych = *source->cursor())) {
	case ')':
	case ',':	goto yy19;
	default:	goto yy14;
	}
yy14:
#line 587 "bcplus/parser/detail/Scanner.re2c"
	{
												  if (sgl_quote || dbl_quote) goto yyc_ARG;
												  if (--parens < 0) {
												    ret = T_PAREN_R;
													_cond = yycNORMAL;
													goto re2c_finish;
												  } else goto yyc_ARG;
												}
#line 299 "<stdout>"
yy15:
	marker = source->cursor() + 1;
	++source->cursor();
	switch ((yych = *source->cursor())) {
	case ')':
	case ',':	goto yy17;
	default:	goto yy16;
	}
yy16:
#line 616 "bcplus/parser/detail/Scanner.re2c"
	{ 
												  if (!dbl_quote && !sgl_quote && !parens) {
													ret = T_COMMA;
													goto re2c_finish;
												  } else goto yyc_ARG;
												}
#line 316 "<stdout>"
yy17:
	++source->cursor();
	source->cursor() = marker;
#line 622 "bcplus/parser/detail/Scanner.re2c"
	{ 
												  if (!parens && !sgl_quote && !dbl_quote) {
													ret = T_ARG;
												    goto re2c_finish;
												  } else goto yyc_ARG;
												}
#line 327 "<stdout>"
yy19:
	++source->cursor();
	source->cursor() = marker;
#line 572 "bcplus/parser/detail/Scanner.re2c"
	{
												  if (sgl_quote || dbl_quote) goto yyc_ARG;
												  if (--parens < 0) {
												    ret = T_PAREN_R;
													_cond = yycNORMAL;
													goto re2c_finish;
												  }
												}
#line 340 "<stdout>"
yy21:
	++source->cursor();
	source->cursor() = marker;
#line 565 "bcplus/parser/detail/Scanner.re2c"
	{ 
												  if (sgl_quote || dbl_quote) goto yyc_ARG;
												  if (!parens++) {
												  	ret = T_PAREN_L;						
													goto re2c_finish;
												  } else goto yyc_ARG;
												}
#line 352 "<stdout>"
yy23:
	++source->cursor();
	source->cursor() = marker;
#line 605 "bcplus/parser/detail/Scanner.re2c"
	{
												  if (!dbl_quote) { 
													sgl_quote = !sgl_quote;
													if (!sgl_quote) {
														ret = T_ARG;
												    	goto re2c_finish;
													} else goto yyc_ARG;
												  } else goto yyc_ARG;
												}
#line 366 "<stdout>"
yy25:
	++source->cursor();
	source->cursor() = marker;
#line 596 "bcplus/parser/detail/Scanner.re2c"
	{
												  if (!sgl_quote) { 
													dbl_quote = !dbl_quote;
													if (!dbl_quote) {
														ret = T_ARG;
												    	goto re2c_finish;
													} else goto yyc_ARG;
												  } else goto yyc_ARG;
												}
#line 380 "<stdout>"
/* *********************************** */
yyc_ASP_CP:
	if ((source->limit() - source->cursor()) < 2) source->fill(2);
	yych = *source->cursor();
	switch (yych) {
	case 0x00:	goto yy29;
	case '\n':	goto yy34;
	case ':':	goto yy33;
	default:	goto yy31;
	}
yy29:
	++source->cursor();
#line 474 "bcplus/parser/detail/Scanner.re2c"
	{ 
												  BLK_FINISH(1);
												  ret = T_ERR_UNTERMINATED_ASP;			
												  _cond = yycNORMAL;
												  source->cursor()--;
												  goto re2c_finish;					
												}
#line 401 "<stdout>"
yy31:
	++source->cursor();
yy32:
#line 481 "bcplus/parser/detail/Scanner.re2c"
	{												goto yyc_ASP_CP;					}
#line 407 "<stdout>"
yy33:
	yyaccept = 0;
	yych = *(source->marker() = ++source->cursor());
	switch (yych) {
	case '-':	goto yy36;
	default:	goto yy32;
	}
yy34:
	++source->cursor();
#line 461 "bcplus/parser/detail/Scanner.re2c"
	{ BLK_LINE;										goto yyc_ASP_CP;					}
#line 419 "<stdout>"
yy36:
	++source->cursor();
	if ((source->limit() - source->cursor()) < 7) source->fill(7);
	yych = *source->cursor();
	switch (yych) {
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy36;
	case 'e':	goto yy39;
	default:	goto yy38;
	}
yy38:
	source->cursor() = source->marker();
	goto yy32;
yy39:
	yych = *++source->cursor();
	switch (yych) {
	case 'n':	goto yy40;
	default:	goto yy38;
	}
yy40:
	yych = *++source->cursor();
	switch (yych) {
	case 'd':	goto yy41;
	default:	goto yy38;
	}
yy41:
	yych = *++source->cursor();
	switch (yych) {
	case '_':	goto yy44;
	case 'a':	goto yy38;
	default:	goto yy43;
	}
yy42:
	++source->cursor();
	if ((source->limit() - source->cursor()) < 3) source->fill(3);
	yych = *source->cursor();
yy43:
	switch (yych) {
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy42;
	case 'a':	goto yy51;
	default:	goto yy38;
	}
yy44:
	yych = *++source->cursor();
	switch (yych) {
	case 'a':	goto yy45;
	default:	goto yy38;
	}
yy45:
	yych = *++source->cursor();
	switch (yych) {
	case 's':	goto yy46;
	default:	goto yy38;
	}
yy46:
	yych = *++source->cursor();
	switch (yych) {
	case 'p':	goto yy47;
	default:	goto yy38;
	}
yy47:
	++source->cursor();
	if (source->limit() <= source->cursor()) source->fill(1);
	yych = *source->cursor();
	switch (yych) {
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy47;
	case '.':	goto yy49;
	default:	goto yy38;
	}
yy49:
	++source->cursor();
#line 463 "bcplus/parser/detail/Scanner.re2c"
	{ 
												  _cond = yycNORMAL; 
												  ret = T_ASP_CP; 
												  goto re2c_finish;					
												}
#line 505 "<stdout>"
yy51:
	yych = *++source->cursor();
	switch (yych) {
	case 's':	goto yy52;
	default:	goto yy38;
	}
yy52:
	yych = *++source->cursor();
	switch (yych) {
	case 'p':	goto yy53;
	default:	goto yy38;
	}
yy53:
	++source->cursor();
	if (source->limit() <= source->cursor()) source->fill(1);
	yych = *source->cursor();
	switch (yych) {
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy53;
	case '.':	goto yy55;
	default:	goto yy38;
	}
yy55:
	++source->cursor();
#line 469 "bcplus/parser/detail/Scanner.re2c"
	{ 
												  _cond = yycNORMAL; 
												  ret = T_ASP_CP; 
												  goto re2c_finish;					
												}
#line 538 "<stdout>"
/* *********************************** */
yyc_ASP_GR:
	if ((source->limit() - source->cursor()) < 8) source->fill(8);
	yych = *source->cursor();
	switch (yych) {
	case 0x00:	goto yy59;
	case '\n':	goto yy64;
	case '#':	goto yy63;
	default:	goto yy61;
	}
yy59:
	++source->cursor();
#line 452 "bcplus/parser/detail/Scanner.re2c"
	{ 
												  BLK_FINISH(1);
												  ret = T_ERR_UNTERMINATED_ASP;			
												  _cond = yycNORMAL;
												  source->cursor()--;
												  goto re2c_finish;					
												}
#line 559 "<stdout>"
yy61:
	++source->cursor();
yy62:
#line 459 "bcplus/parser/detail/Scanner.re2c"
	{												goto yyc_ASP_GR;					}
#line 565 "<stdout>"
yy63:
	yyaccept = 0;
	yych = *(source->marker() = ++source->cursor());
	switch (yych) {
	case 'e':	goto yy66;
	default:	goto yy62;
	}
yy64:
	++source->cursor();
#line 443 "bcplus/parser/detail/Scanner.re2c"
	{ 
									 			  BLK_LINE;
												  goto yyc_ASP_GR;				
												}
#line 580 "<stdout>"
yy66:
	yych = *++source->cursor();
	switch (yych) {
	case 'n':	goto yy68;
	default:	goto yy67;
	}
yy67:
	source->cursor() = source->marker();
	goto yy62;
yy68:
	yych = *++source->cursor();
	switch (yych) {
	case 'd':	goto yy69;
	default:	goto yy67;
	}
yy69:
	yych = *++source->cursor();
	switch (yych) {
	case '_':	goto yy70;
	default:	goto yy67;
	}
yy70:
	yych = *++source->cursor();
	switch (yych) {
	case 'a':	goto yy71;
	default:	goto yy67;
	}
yy71:
	yych = *++source->cursor();
	switch (yych) {
	case 's':	goto yy72;
	default:	goto yy67;
	}
yy72:
	yych = *++source->cursor();
	switch (yych) {
	case 'p':	goto yy73;
	default:	goto yy67;
	}
yy73:
	++source->cursor();
	if (source->limit() <= source->cursor()) source->fill(1);
	yych = *source->cursor();
	switch (yych) {
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy73;
	case '.':	goto yy75;
	default:	goto yy67;
	}
yy75:
	++source->cursor();
#line 447 "bcplus/parser/detail/Scanner.re2c"
	{ 
										 		  _cond = yycNORMAL; 
										 		  ret = T_ASP_GR; 
										 		  goto re2c_finish;					
												}
#line 640 "<stdout>"
/* *********************************** */
yyc_BLK_COMMENT:
	if ((source->limit() - source->cursor()) < 2) source->fill(2);
	yych = *source->cursor();
	switch (yych) {
	case 0x00:	goto yy79;
	case '\n':	goto yy84;
	case '*':	goto yy83;
	default:	goto yy81;
	}
yy79:
	++source->cursor();
#line 434 "bcplus/parser/detail/Scanner.re2c"
	{ 
												  BLK_FINISH(1);
												  ret = T_ERR_UNTERMINATED_BLK_COMMENT;			
												  _cond = yycNORMAL;
												  source->cursor()--;
												  goto re2c_finish;					
												}
#line 661 "<stdout>"
yy81:
	++source->cursor();
yy82:
#line 441 "bcplus/parser/detail/Scanner.re2c"
	{												goto yyc_BLK_COMMENT;				}
#line 667 "<stdout>"
yy83:
	yych = *++source->cursor();
	switch (yych) {
	case '/':	goto yy86;
	default:	goto yy82;
	}
yy84:
	++source->cursor();
#line 423 "bcplus/parser/detail/Scanner.re2c"
	{ 
												  BLK_LINE;
												  blk << "% "; 
												  goto yyc_BLK_COMMENT;				
												}
#line 682 "<stdout>"
yy86:
	++source->cursor();
#line 428 "bcplus/parser/detail/Scanner.re2c"
	{ 
												  BLK_FINISH(2);
												  _cond = yycNORMAL; 
												  ret = T_COMMENT; 
												  goto re2c_finish;					
												}
#line 692 "<stdout>"
/* *********************************** */
yyc_COMMENT:
	if ((source->limit() - source->cursor()) < 2) source->fill(2);
	yych = *source->cursor();
	switch (yych) {
	case 0x00:	goto yy90;
	case '\n':	goto yy93;
	default:	goto yy92;
	}
yy90:
	++source->cursor();
	yych = *source->cursor();
	goto yy96;
yy91:
#line 415 "bcplus/parser/detail/Scanner.re2c"
	{ 												goto yyc_COMMENT;					}
#line 709 "<stdout>"
yy92:
	yych = *++source->cursor();
	goto yy96;
yy93:
	++source->cursor();
#line 409 "bcplus/parser/detail/Scanner.re2c"
	{ 
												  source->cursor()--; 
												  _cond = yycNORMAL; 
												  ret = T_COMMENT;			
												  goto re2c_finish;
												}
#line 722 "<stdout>"
yy95:
	++source->cursor();
	if (source->limit() <= source->cursor()) source->fill(1);
	yych = *source->cursor();
yy96:
	switch (yych) {
	case '\n':	goto yy91;
	default:	goto yy95;
	}
/* *********************************** */
yyc_DBL_STRING:
	if ((source->limit() - source->cursor()) < 2) source->fill(2);
	yych = *source->cursor();
	switch (yych) {
	case 0x00:	goto yy99;
	case '\n':	goto yy105;
	case '"':	goto yy102;
	case '\\':	goto yy104;
	default:	goto yy101;
	}
yy99:
	++source->cursor();
yy100:
#line 385 "bcplus/parser/detail/Scanner.re2c"
	{												goto yyc_DBL_STRING;				}
#line 748 "<stdout>"
yy101:
	yych = *++source->cursor();
	goto yy100;
yy102:
	++source->cursor();
#line 379 "bcplus/parser/detail/Scanner.re2c"
	{ 
												  _cond = yycNORMAL; 
												  ret = T_STRING_LITERAL;	
												  postskip = 1;
												  goto re2c_finish;					
												}
#line 761 "<stdout>"
yy104:
	yych = *++source->cursor();
	switch (yych) {
	case '"':	goto yy107;
	default:	goto yy100;
	}
yy105:
	++source->cursor();
#line 377 "bcplus/parser/detail/Scanner.re2c"
	{ source->newline();				 			goto yyc_DBL_STRING; 				}
#line 772 "<stdout>"
yy107:
	++source->cursor();
#line 378 "bcplus/parser/detail/Scanner.re2c"
	{ 												goto yyc_DBL_STRING; 				}
#line 777 "<stdout>"
/* *********************************** */
yyc_F2LP_CP:
	if ((source->limit() - source->cursor()) < 2) source->fill(2);
	yych = *source->cursor();
	switch (yych) {
	case 0x00:	goto yy111;
	case '\n':	goto yy116;
	case ':':	goto yy115;
	default:	goto yy113;
	}
yy111:
	++source->cursor();
#line 556 "bcplus/parser/detail/Scanner.re2c"
	{ 
												  BLK_FINISH(1);
												  ret = T_ERR_UNTERMINATED_F2LP;			
												  _cond = yycNORMAL;
												  source->cursor()--;
												  goto re2c_finish;					
												}
#line 798 "<stdout>"
yy113:
	++source->cursor();
yy114:
#line 563 "bcplus/parser/detail/Scanner.re2c"
	{												goto yyc_F2LP_CP;					}
#line 804 "<stdout>"
yy115:
	yyaccept = 0;
	yych = *(source->marker() = ++source->cursor());
	switch (yych) {
	case '-':	goto yy118;
	default:	goto yy114;
	}
yy116:
	++source->cursor();
#line 543 "bcplus/parser/detail/Scanner.re2c"
	{ BLK_LINE;										goto yyc_F2LP_CP;					}
#line 816 "<stdout>"
yy118:
	++source->cursor();
	if ((source->limit() - source->cursor()) < 8) source->fill(8);
	yych = *source->cursor();
	switch (yych) {
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy118;
	case 'e':	goto yy121;
	default:	goto yy120;
	}
yy120:
	source->cursor() = source->marker();
	goto yy114;
yy121:
	yych = *++source->cursor();
	switch (yych) {
	case 'n':	goto yy122;
	default:	goto yy120;
	}
yy122:
	yych = *++source->cursor();
	switch (yych) {
	case 'd':	goto yy123;
	default:	goto yy120;
	}
yy123:
	yych = *++source->cursor();
	switch (yych) {
	case '_':	goto yy126;
	case 'f':	goto yy120;
	default:	goto yy125;
	}
yy124:
	++source->cursor();
	if ((source->limit() - source->cursor()) < 4) source->fill(4);
	yych = *source->cursor();
yy125:
	switch (yych) {
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy124;
	case 'f':	goto yy134;
	default:	goto yy120;
	}
yy126:
	yych = *++source->cursor();
	switch (yych) {
	case 'f':	goto yy127;
	default:	goto yy120;
	}
yy127:
	yych = *++source->cursor();
	switch (yych) {
	case '2':	goto yy128;
	default:	goto yy120;
	}
yy128:
	yych = *++source->cursor();
	switch (yych) {
	case 'l':	goto yy129;
	default:	goto yy120;
	}
yy129:
	yych = *++source->cursor();
	switch (yych) {
	case 'p':	goto yy130;
	default:	goto yy120;
	}
yy130:
	++source->cursor();
	if (source->limit() <= source->cursor()) source->fill(1);
	yych = *source->cursor();
	switch (yych) {
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy130;
	case '.':	goto yy132;
	default:	goto yy120;
	}
yy132:
	++source->cursor();
#line 545 "bcplus/parser/detail/Scanner.re2c"
	{ 
												  _cond = yycNORMAL; 
												  ret = T_F2LP_CP; 
												  goto re2c_finish;					
												}
#line 908 "<stdout>"
yy134:
	yych = *++source->cursor();
	switch (yych) {
	case '2':	goto yy135;
	default:	goto yy120;
	}
yy135:
	yych = *++source->cursor();
	switch (yych) {
	case 'l':	goto yy136;
	default:	goto yy120;
	}
yy136:
	yych = *++source->cursor();
	switch (yych) {
	case 'p':	goto yy137;
	default:	goto yy120;
	}
yy137:
	++source->cursor();
	if (source->limit() <= source->cursor()) source->fill(1);
	yych = *source->cursor();
	switch (yych) {
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy137;
	case '.':	goto yy139;
	default:	goto yy120;
	}
yy139:
	++source->cursor();
#line 551 "bcplus/parser/detail/Scanner.re2c"
	{ 
												  _cond = yycNORMAL; 
												  ret = T_F2LP_CP; 
												  goto re2c_finish;					
												}
#line 947 "<stdout>"
/* *********************************** */
yyc_F2LP_GR:
	if ((source->limit() - source->cursor()) < 9) source->fill(9);
	yych = *source->cursor();
	switch (yych) {
	case 0x00:	goto yy143;
	case '\n':	goto yy148;
	case '#':	goto yy147;
	default:	goto yy145;
	}
yy143:
	++source->cursor();
#line 534 "bcplus/parser/detail/Scanner.re2c"
	{ 
												  BLK_FINISH(1);
												  ret = T_ERR_UNTERMINATED_F2LP;			
												  _cond = yycNORMAL;
												  source->cursor()--;
												  goto re2c_finish;					
												}
#line 968 "<stdout>"
yy145:
	++source->cursor();
yy146:
#line 541 "bcplus/parser/detail/Scanner.re2c"
	{												goto yyc_F2LP_GR;					}
#line 974 "<stdout>"
yy147:
	yyaccept = 0;
	yych = *(source->marker() = ++source->cursor());
	switch (yych) {
	case 'e':	goto yy150;
	default:	goto yy146;
	}
yy148:
	++source->cursor();
#line 525 "bcplus/parser/detail/Scanner.re2c"
	{ 
												  BLK_LINE;
												  goto yyc_F2LP_GR;				
												}
#line 989 "<stdout>"
yy150:
	yych = *++source->cursor();
